# NSpike2

./: .configure.ac.swp  .directory  .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.status  configure  configure.ac  kspike  posoutput.txt  setupnet
DSPLowLevelCode/: MainDSPRev9.txt  MainDSPrev6.txt  MainDSPrev9SN014.txt
Doc/: .NSpike_Instructions.html.swp  DSPaddresses  DigIOCommands  DigIOlMap.doc  LorenChannelMap.doc  LorenChannelMap.htm  NSPIKE_NDAQ_Hardware_Setup.doc  NSPIKE_NDAQ_Setup.doc  NSpikeSMProgGuide.doc  NSpike_Instructions.html  NSpike_MPEG_Info  NSpike_Matlab_HOWTO.html  NSpike_NewModule_HOWTO  RGBColors.txt  Spike_Troubleshooting_HOWTO  hailsetupnet  index.html  nspike_compilation.html  rgbtable  setupnet  specifications  spikedataflow.cdr  sysctl.conf
Doc/ExampleConfigs/: CK_record.txt  behavior.config  m.conf  ns  nspikeconfig1  nspikeconfig1.my  nspikeconfig2  nspikeconfig3  nspikeconfig4  s1a.conf  s1a4-13-09.conf  s1arecord.conf  test.config  test_acq
Doc/ExampleConfigs/RewardControlConfig/: ctk_wtrackrewardconfig  linear_reward  multipleWbehavconfig  spj_utrackrewardconfig  spj_wtrackrewardconfig  utrackrewardconfig  wtrackrewardconfig
Matlab/: README  nfileiomat.c  nreadcont.c  readcont.m
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am  nspike_rgbcolor  nspikecalfile
include/: spike_defines.h  spike_dio.h  spike_dsp.h  spike_dsp_shared.h  spike_functions.h  spike_main.h  spike_matlab.h  spike_position.h  spike_rtl.h  spike_stimcontrol_defines.h  spike_user_defines.h  spike_userdata.h  spike_userprogram_defines.h  spikecommon.h  sqcompat.h
src-extract/: Makefile  Makefile.am  Makefile.in  spike_extract.cpp  spike_postimestamp.cpp
src-extract/.deps/: spike_config.Po  spike_extract.Po  spike_postimestamp.Po  spike_util.Po
src-fixpos/: Makefile  Makefile.am  Makefile.in  spike_fixpos.cpp  spike_fixpos_defines.h  spike_fixpos_shared.h  spike_fixposutil.cpp
src-fixpos/.deps/: spike_config.Po  spike_fixpos.Po  spike_fixposutil.Po  spike_message.Po  spike_util.Po
src-gui/: .spikeInput.cpp.swp  .spikeUserGUI.cpp.swp  Makefile  Makefile.am  audio.h  fsConfigureAOut.cpp  fsConfigureAOut.h  fsConfigureStimulators.cpp  fsConfigureStimulators.h  fsMainConfig.cpp  fsOutputOnlyTab.cpp  fsOutputOnlyTab.h  fsRealtimeFeedbackTab.cpp  fsRealtimeFeedbackTab.h  guiresources.qrc  nspike.pro  portinglog.txt  qrc_guiresources.cpp  qsoundalsa.cpp  rewardControl.cpp  rewardControl.h  spikeFSData.cpp  spikeFSData.h  spikeFSGUI.cpp  spikeFSGUI.h  spikeFSLatencyGUI.cpp  spikeFSStimForm.cpp  spikeFSThetaGUI.cpp  spikeGLPane.cpp  spikeGLPane.h  spikeInput.cpp  spikeInput.h  spikeMainWindow.cpp  spikeMainWindow.h  spikeStatusbar.cpp  spikeStatusbar.h  spikeUserConfigForm.cpp  spikeUserData.cpp  spikeUserData.h  spikeUserGUI.cpp  (+19 more)
src-gui/testing/: main.cpp  qrc_guiresources.cpp  testUserGui  testUserGui.pro
src-main/: Makefile  Makefile.am  Makefile.in  nspike.pro  spike_dsp.cpp  spike_dsp.cpp.10-18-10  spike_dsp_shared.cpp  spike_main.cpp  spike_main_shared.cpp
src-main/.deps/: spike_config.Po  spike_dsp.Po  spike_main.Po  spike_message.Po
src-modules/: Makefile  Makefile.am  Makefile.in  matlabspikesocket.cpp  nspike_userdata  spike_V4Lcapture.cpp  spike_V4Lcapture.h  spike_config.cpp  spike_daq.cpp  spike_dsp_shared.cpp  spike_ffmpegEncoder.cpp  spike_ffmpegEncoder.h  spike_fsdata  spike_fsdata.cpp  spike_main_matlab.cpp  spike_main_userdata.cpp  spike_matlab.cpp  spike_message.cpp  spike_posdaq.cpp  spike_process_posdata.cpp  spike_save_data.cpp  spike_userdata  spike_userdata.cpp  spike_userdata_buffered.cpp  spike_util.cpp
src-modules/.deps/: spike_V4Lcapture.Po  spike_config.Po  spike_daq-spike_daq.Po  spike_daq-spike_message.Po  spike_ffmpegEncoder.Po  spike_main_matlab.Po  spike_matlab.Po  spike_message.Po  spike_posdaq.Po  spike_process_posdata.Po  spike_save_data.Po
src-modules/src-fs/: README  generate_pulse_functions.cpp  generate_pulse_functions.cpp.orig  ripple_process.cpp  spatial_process.cpp  stimcontrol_defines.h  stimcontrol_globalvar.h  stimcontrol_processdata.cpp  stimcontrol_processdata.cpp.orig  stimcontrol_processmessage.cpp
src-modules/src-fs/matlab/: fraeeg08-2-29.mat  generate_filtercoeffs.m
src-modules/src-user/: filtercoeffs.h  generate_pulse_functions.cpp  ripple_process.cpp  stimcontrol_defines.h  stimcontrol_globalvar.h  stimcontrol_processdata.cpp  stimcontrol_processmessage.cpp
src-modules/src-user/cfilter/: filter  filter.c  filtercoeffs.h
src-modules/src-user/matlab/: ellipfilter.mat  genrawdata.m  rippledetect.m  temp.h  tempb.txt
src-user/: Makefile  Makefile.am  Makefile.in  filtercoeffs.h  generate_pulse_functions.cpp  laser  laser.cpp  laser_defines.h  laser_process.cpp  notes.txt  pulseFunctions.cpp  ripple_process.cpp  send_dsp_commands.cpp  stimcontrol_defines.h  stimcontrol_main.cpp  stimcontrol_process.cpp
src-user/.deps/: laser.Po  laser_process.Po  pulseFunctions.Po  ripple_process.Po  send_dsp_commands.Po  spike_message.Po
src-user/matlab/: calculatemeans.m  generate_filtercoeffs.m~  tempa.txt
