
CXXFLAGS+=-g

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = configure include/*.h
EXTRA_DIST += src-gui/nspike.pro src-gui/Makefile.am \
              src-gui/*.h src-gui/*.cpp
EXTRA_DIST += data Doc DSPLowLevelCode
EXTRA_DIST += kspike setupnet
EXTRA_DIST += autogen.sh
SUBDIRS = src-modules src-fixpos src-extract src-user src-gui src-main 

